@@ -1,4 +1,5 @@
 import java.util.ArrayList;
+import java.util.Scanner;
 
 public class Battleship extends Game {
     public Battleship(ArrayList<Player> incomingPlayers) {
@@ -11,16 +12,53 @@ public class Battleship extends Game {
             gameBoards.add(battleshipGameBoard);
         }
 
-        currentPlayer = players.getFirst(); // first player starts
+        currentPlayer = players.get(0); // first player starts
+    }
+
+    @Override
+    public String getGameName() {
+        return "Battleship";
     }
 
     @Override
     public void play() {
+        System.out.println("Welcome to Battleship!");
+        initialize();
 
+        // for reading user input
+        Scanner scanner = new Scanner(System.in);
+
+        while (!isGameOver()) {
+            System.out.println("Player " + currentPlayer.getUsername() + "'s turn. Here is your Board:");
+            displayBoard();
+
+            System.out.println("\nEnter coordinates for your attack (x, y):");
+            String coordinates = scanner.nextLine();
+            // Check if input matches the pattern "x,y" where x and y are digits
+            if (!coordinates.matches("\\d+,\\d+")) {
+                System.out.println("Invalid format! Please enter coordinates as 'x,y' (e.g. '3,5').\n");
+                continue;
+            }
+
+            // Input is valid, parse and continue game
+            String[] coordinatesArray = coordinates.split(",");
+            int x = Integer.parseInt(coordinatesArray[0]);
+            int y = Integer.parseInt(coordinatesArray[1]);
+            handleInput(x, y);
+        }
+    }
+
+
+    public void displayBoard() {
+        for (Grid board : gameBoards) {
+            if (board.getPlayer() == currentPlayer) {
+                System.out.println(board);
+            }
+        }
     }
 
     @Override
-    // initialize the game wi
+    // initialize the game boards
     public void initialize() {
         for (Grid board : gameBoards) {
             board.initialize();
@@ -28,19 +66,19 @@ public class Battleship extends Game {
     }
 
     @Override
-    public Boolean isGameOver() {
+    public boolean isGameOver() {
         Player possibleWinner = null;
-        int activePlayers = players.size();
+        int remainingPlayers = 0;
 
         for (Grid board : gameBoards) {
             if (!((BattleshipGrid) board).allShipsSunk()) {
-                activePlayers--;
-                // this player's board is not empty, could be considered winner IF another player's board is empty
-                possibleWinner = board.getPlayer();
+                remainingPlayers++; // player board is not empty, they are still in the game
+                possibleWinner = board.getPlayer(); // this player's board is not empty, could be considered winner IF another player's board is empty
             }
         }
 
-        if (activePlayers == 1) {
+        if (remainingPlayers == 1) {
+            // Only one player left with ships still on their board, they are the winner
             winner = possibleWinner;
             return true;
         }
@@ -48,15 +86,25 @@ public class Battleship extends Game {
     }
 
     @Override
-    public void handleInput(Tile shipPiece, String x, String y) {
-        int x_coordinate = Integer.parseInt(x);
-        int y_coordinate = Integer.parseInt(y);
-
+    public void handleInput(int x_coord, int y_coord) {
         // Grab the opposing player's board and attempt a guess at their battleship locations
         int opposingPlayer = (players.indexOf(currentPlayer) + 1) % players.size();
         BattleshipGrid opponentGrid = (BattleshipGrid) gameBoards.get(opposingPlayer);
-        opponentGrid.placeTile(x_coordinate, y_coordinate);
-        updateGameState(); // move to next player
+        int num_opp_ships_BEFORE = opponentGrid.getShips().size();
+        boolean tilePlaced = opponentGrid.placeTile(x_coord, y_coord);
+        if (!tilePlaced) {
+            return;
+        }
+        int num_opp_ships_AFTER = opponentGrid.getShips().size();
+
+        // Check if a ship has been hit, generate a new battleship on the current player's board if so
+        if (num_opp_ships_BEFORE > num_opp_ships_AFTER) {
+            int currentPlayerIdx = players.indexOf(currentPlayer) % players.size();
+            BattleshipGrid currentPlayerGrid = (BattleshipGrid) gameBoards.get(currentPlayerIdx);
+            currentPlayerGrid.generateBattleShip();
+        }
+
+        updateGameState(); // check if the game is over, move on to next player if not
     }
 
     @Override
@@ -64,8 +112,9 @@ public class Battleship extends Game {
         if (!isGameOver()) {
             int nextPlayer = (players.indexOf(currentPlayer) + 1) % players.size();
             currentPlayer = players.get(nextPlayer);
+        } else {
+            System.out.println("Game Over!");
+            System.out.println("Player '" + winner.getUsername() + "''s is the Winner!");
         }
-        System.out.println("Game Over!");
-        System.out.println("Player '" + winner.getUsername() + "''s is the Winner!");
     }
 }
